<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirQuotes</string>
    <string name="menu_settings">Settings</string>
    <string name="p_message">Post</string>
    <string name="v_message">View</string>
    <string name="title_activity_post">Post A Message!</string>
    <string name="enter_m">Enter message</string>
    <string name="m_button">Post</string>
    <string name="title_activity_find">All Messages</string>
    <string name="title_section1">Messages</string>
    <string name="title_section2">Map</string>
    <string name="title_section3">Friends</string>
    <string name="title_activity_map_fragment">MapFragment</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_email">johnSmith12@email.com</string>
    <string name="enter_password">********</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_logging">LoggingActivity</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>
    <string name="add_friends">Enter Friend\'s Email</string>
    <string name="friend_button">Add Friend</string>
    <string name="title_activity_comment_view">CommentViewActivity</string>
    <string name="done_button">Done</string>
    <string name="base_post_text">Comment</string>
    <string name="base_username_text">username</string>
    <string name="base_point_value_text">0</string>
    <string name="base_date_text">12-21-12 5:00pm</string>
    <string name="climb_button">Climb</string>
    <string name="dive_button">Dive</string>
    <string name="base_comment">Insert comment here...</string>
    <string name="add_comment_button">Add Comment</string>
    <string name="view_friends_radio">View Friend Posts Only</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_fragment_message_help">MessageHelpActivity</string>
    <string name="title_activity_map_help_fragment">MapHelpFragment</string>
    <string name="title_activity_friends_help_fragment">FriendsHelpFragment</string>
    <string name="logout_string">Logout</string>
    <string name="refresh_string">Refresh</string>
    <string name="help_string">Help</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="filter_string">Filter By: </string>
    <string name="title_activity_coupon">CouponActivity</string>
    <string name="help_add_friend_title">Adding Friends</string>
    <string name="help_add_friend_content">In order to add a friend, type their username/email into the text box and then tap the "Add Friend" button.</string>
    <string name="help_view_friend_title">Filtering Posts By Friends</string>
    <string name="help_view_friend_content">In order to only view posts that are made by friends, check the "View Friend Post Only" check box. If you wish to see all of the local chatter, Uncheck the box.</string>
    <string name="help_view_map_pin_title">View Post Preview</string>
    <string name="help_view_map_pin_content">In order to see a preview of a post, tap the pin and the preview will expand from the pin.</string>
    <string name="help_view_map_post_title">View Post from Map</string>
    <string name="help_view_map_post_content">In order to see a full post, after opening the preview, tap the preview and the full post view will open.</string>
    <string name="help_view_main_post_title">View Individual Post</string>
    <string name="help_view_main_post_content">In order to view an individual post, simply click on the post and a new window will open. This window will show the post, it\'s information and any comments made upon the post.</string>
    <string name="help_choose_filter_title">Choosing a Chatter Filter</string>
    <string name="help_choose_filter_content">In order to choose a filter for the local chatter, click the settings button on your phone. Then tap "Filter By:" and choose the type of filter you would prefer. The choices are by altitude(Highest), by time(Most Recent), or by people you know.(Friends)</string>
</resources>