<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/downButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CommentViewActivity" >

    <Button
        android:id="@+id/doneButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onDoneClicked"
        android:text="@string/done_button" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/doneButton"
        android:layout_marginTop="18dp"
        android:text="@string/base_post_text" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/postText"
        android:layout_below="@+id/postText"
        android:text="@string/base_username_text" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameText"
        android:layout_below="@+id/usernameText"
        android:text="@string/base_date_text" />

    <TextView
        android:id="@+id/altText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dateText"
        android:layout_alignBottom="@+id/dateText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="39dp"
        android:text="@string/base_point_value_text" />

    <Button
        android:id="@+id/upButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dateText"
        android:text="@string/climb_button" 
        android:onClick="onClimbClicked"/>

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/upButton"
        android:layout_alignBottom="@+id/upButton"
        android:layout_alignParentRight="true"
        android:text="@string/dive_button"
        android:onClick="onDiveClicked" />

</RelativeLayout>