<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FriendsHelpFragment"
    style="@style/MainTheme" >

    <TextView
        android:id="@+id/viewMainPostHelpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/help_add_friend_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/viewMapPinHelpContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewMainPostHelpTitle"
        android:layout_below="@+id/viewMainPostHelpTitle"
        android:text="@string/help_add_friend_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/viewMapPostHelpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewMapPinHelpContent"
        android:layout_below="@+id/viewMapPinHelpContent"
        android:layout_marginTop="54dp"
        android:text="@string/help_view_friend_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/chooseFilterHelpContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewMapPostHelpTitle"
        android:layout_below="@+id/viewMapPostHelpTitle"
        android:text="@string/help_view_friend_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>